--- a/composer.json
+++ b/composer.json
@@ -1,31 +1,25 @@
 {
-    "name": "mavenbird/booking-and-reservation-system",
-    "description": "Booking and Reservation System For Magento2",
+    "name": "mavenbird/booking-system",
+    "description": "Magento 2 module for managing bookings, allowing customers to schedule and manage appointments directly on your website.",
     "require": {
-        "magento/module-config": "101.2.*",
-        "magento/module-store": "101.1.*",
-        "magento/module-sales": "103.0.*",
-        "magento/module-quote": "101.2.*",
-        "magento/module-customer": "103.0.*",
-        "magento/module-backend": "102.0.*",
-        "magento/module-tax": "100.4.*",
-        "magento/module-directory": "100.4.*",
-        "magento/module-theme": "101.1.*",
-        "magento/module-catalog": "104.0.*",
-        "magento/module-catalog-inventory": "100.4.*",
-        "magento/module-eav": "102.1.*",
-        "magento/framework": "103.0.*"
+        "php": ">=8.0.0"
     },
     "type": "magento2-module",
     "version": "1.0.0",
-    "license": [
-        "proprietary"
+    "license": "proprietary",
+    "authors": [
+        {
+          "name": "Mavenbird",
+          "email": "support@mavenbird.com",
+          "homepage": "https://www.mavenbird.com",
+          "role": "Technical Support"
+        }
     ],
     "autoload": {
         "files": [
             "registration.php"
         ],
-        "psr-4": {
+        "psr-4":  { 
             "Mavenbird\\BookingSystem\\": ""
         }
     }
